5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1646_2449.log
== TEST (2019-07-09 14:48:42) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))

if(a*e-b*d==0):
	print("Nao tem solucao")
else:
	x=c*e-b*f/a*e-b*d
	y=a*f-c*d/a*e-b*d
	
print(x)	
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:49:37) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))

if(a*e-b*d==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=a*f-c*d/a*e-b*d
	
print(x)	
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:50:07) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))

if(a*e-b*d==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
print(x)	
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:50:14) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))

if(a*e-b*d==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
print(x)	
print(y)
-- EXECUTION TIME:
0.725992
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 14, in <module>
    print(x)	
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:50:22) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))

if(a*e-b*d==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
print(x)	
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:50:59) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))

if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
print(x)	
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:51:04) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))

if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
print(x)	
print(y)
-- EXECUTION TIME:
0.832122
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 14, in <module>
    print(x)	
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:51:09) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))

if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
print(x)	
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:51:37) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))
x=0
y=0
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
print(x)	
print(y)
-- OUTPUT:
Nao tem solucao
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:51:51) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))


if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
	print(x)	
	print(y)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:51:59) 
-- CODE:
a=float(input("Coeficiente: "))
b=float(input("Coeficiente: "))
c=float(input("Coeficiente: "))
d=float(input("Coeficiente: "))
e=float(input("Coeficiente: "))
f=float(input("Coeficiente: "))


if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
	print(x)	
	print(y)
-- EXECUTION TIME:
0.705631
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
